# mcp-uipath-orchestrator

./: .gitignore  Context.md  README.md  pyproject.toml  server.py
config/: config.json  config_template.json
downloads/: 1password_API_Library.1.0.1.nupkg
src/: service.py  test.py
src/tests/: test_orchestrator.py
